<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eKool</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news">News</string>
    <string name="welcome">Tere Tulemast eKooli</string>
    <string name="please">Palun Logi sisse!</string>
    <string name="grades">Hinded</string>
    <string name="exercise">Ülesanded</string>
    <string name="distsipline">Distsipliin</string>
    <string name="news">Uudised</string>
    <string name="full">Tavavaade</string>
    <string name="grade">Hinne</string>
    <string name="title_activity_main">MainActivit</string>
    <string name="rememberme">Jäta mind meelde</string>
    <string name="automatic">Logi mind automaatselt sisse</string>
    <string name="pupilname">Õpilase Nimi</string>
    <string name="pupilschool">Kool</string>
    <string name="syncing">Võimalda Teavitused</string>
    <string name="syncsummary">Kahjuks teavitused hetkel veel ei tööta!</string>
    <string name="exit">Välju rakendusest</string>
    <string name="logout">Logi Välja</string>
            <string name="login">Logi Sisse</string>
                <string name="loginpriv">Logi Sisse Privaatselt</string>
                <string name="logoffline">Logi sisse võrguühenduseta</string>
    <string name="username">Kasutajanimi</string>
    <string name="password">Salasõna</string>
    <string name="title_activity_about">About</string>
    <string name="refresh">Värskenda</string>
    <string name="settings">Seaded</string>
    <string name="syncrate">Sünkroonimissagedus</string>
    <string name="language">Keel/язык/Language</string>
    <string name="title_activity_settings">Seaded</string>
    <string name="nointernet">Internetiühendus Puudub!</string>
    <string name="logging">Login Sisse...</string>
    <string name="offlineschool">Võimalda võrguta eKool</string>
    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">Üldised Seaded</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_title_sync_frequency">Hinnete sünkroonimise sagedus</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutit</item>
        <item>30 minutit</item>
        <item>1 Tund</item>
        <item>2 Tundi</item>
        <item>3 Tundi</item>
        <item>6 Tundi</item>
    </string-array>
        <string name="pref_header_notifications">Teavitused</string>
    <string-array name="pref_sync_frequency_values">
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>10800000</item>
        <item>21600000</item>
    </string-array>
    <string-array name="pref_lang_frequency_titles">
        <item>Eesti</item>
        <item>English</item>
        <item>Pусский</item>
    </string-array>
    <string-array name="pref_lang_frequency_values">
        <item>et_EE</item>
        <item>en_GB</item>
        <item>ru_RU</item>
            </string-array>
</resources>
