<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login" >

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/layout"
            style="@style/LoginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/login" />

            <LinearLayout
                android:id="@+id/hidemah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/networkless"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Logi sisse võrguühenduseta" />

                <TextView
                    android:id="@+id/with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Kasutajaga "
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberme" />

            <CheckBox
                android:id="@+id/automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automatic" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#95FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar1"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/logging"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center" />

    </RelativeLayout>

    <!-- Login form -->

</merge>
